src/components/Notification/styles.scss
.notifications {
  position: fixed;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  right: 1rem;
  bottom: 1rem;
  min-width: 200px;
  max-width: 500px;
  max-height: 50vh;
}
/* Notification */
.notification {
  margin-top: .5rem;
  padding: .75rem 1rem;
  background: var(--blue);
  border-radius: var(--radius);
  box-shadow: 0 0 .5em rgba(0, 0, 0, .25);
  color: var(--white);
  opacity: 0;
  transform: translateY(-1rem);
  animation: fadeIn .5s forwards;

  &--warning {
    background: var(--yellow);
  }

  &--error {
    background: var(--red);
  }

  &--success {
    background: var(--green);
  }
}

.notification[data-state="hidden"] {
  animation: fadeOut .5s;
}

@keyframes fadeIn {
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes fadeOut {
  from {
    opacity: 1;
    transform: translateY(0);
    margin-bottom: 0;
  }

  to {
    opacity: 0;
    margin-bottom: -1rem;
  }
}

